# negotiation-challenge

./: .gitignore  README.md  program.md  pyproject.toml  results.tsv
prompts/: autoresearch.txt  autoresearch_10.txt  autoresearch_11.txt  autoresearch_12.txt  autoresearch_13.txt  autoresearch_14.txt  autoresearch_15.txt  autoresearch_16.txt  autoresearch_17.txt  autoresearch_19.txt  autoresearch_2.txt  autoresearch_20.txt  autoresearch_21.txt  autoresearch_23.txt  autoresearch_24.txt  autoresearch_25.txt  autoresearch_26.txt  autoresearch_27.txt  autoresearch_28.txt  autoresearch_29.txt  autoresearch_3.txt  autoresearch_30.txt  autoresearch_31.txt  autoresearch_32.txt  autoresearch_36.txt  autoresearch_37.txt  autoresearch_38.txt  autoresearch_39.txt  autoresearch_4.txt  autoresearch_40.txt  autoresearch_41.txt  autoresearch_42.txt  autoresearch_44.txt  autoresearch_45.txt  autoresearch_46.txt  autoresearch_47.txt  autoresearch_49.txt  autoresearch_5.txt  autoresearch_50.txt  autoresearch_52.txt  (+43 more)
src/negotiate/: cli.py  engine.py  inference.py  runner.py
tests/: test_cli.py  test_engine.py  test_integration.py
