[project]
name = "negotiation-challenge"
version = "0.1.0"
description = "Local test harness for the Optimization Arena negotiation challenge"
requires-python = ">=3.11"
dependencies = [
    "click>=8.0",
    "google-genai>=1.0",
    "rich>=13.0",
]

[dependency-groups]
dev = ["pytest>=8.0", "pytest-asyncio>=0.24"]

[project.scripts]
negotiate = "negotiate.cli:cli"

[tool.uv]
package = true

[tool.hatch.build.targets.wheel]
packages = ["src/negotiate"]

[tool.pytest.ini_options]
markers = ["integration: tests that hit the Gemini API"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
